--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "emailjs": "^1.0.8",
     "express": "^4.14.0",
     "jade": "~1.11.0",
     "json-web-token": "^2.0.3",
     "jsonwebtoken": "^7.1.9",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
+    "nodemailer": "^2.6.4",
     "sequelize": "^3.24.3",
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
